--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.10",
     "ngx-cookie-service": "^1.0.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
