--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.2",
     "@auth0/angular-jwt": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "angularx-social-login": "^1.2.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "lodash": "^4.17.10",
