Installed rxjs-compat. Rewrote filters using Subject. Used debounce when filtered. Fixed default (unselected) options

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-cookie-service": "^1.0.10",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
