--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
+  },
+  "engines": {
+    "node": "8.9.0",
+    "npm": "5.5.1"
   },
   "private": true,
   "dependencies": {
@@ -25,22 +30,26 @@
     "angularx-social-login": "^1.2.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "lodash": "^4.17.10",
     "ngx-cookie-service": "^1.0.10",
     "normalize.css": "^8.0.0",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "^6.1.3",
     "@angular/compiler-cli": "^6.1.2",
     "@angular/language-service": "^6.1.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -51,6 +60,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "ws": "3.3.2"
   }
 }
